- Failing to cast a spell takes a turn now.
- wizard/DM can view all the players' inventory via "'".
- Repeated messages are shown in more decent way.(client)

09/12/2001 (Jir)
- Bugfixes. Megos.
- rewritten chat-line commands' code using that of Tanix(thx).

09/12/2001 (written by Tanix/modified by Jir)
- chat-line command /cast.

10/12/2001 (evileye)
- 3d base code committed.
- Multiple towns possible.
- Multiple dungeons / Add dungeon in dm level menu.

11/12/2001 (evileye)
- Anti spamming code added

11/12/2001 (Jir)
- Vertical recall supported.

12/12/2001 (Jir)
- Horizontal recall ({@RW17,22}) supported?
- 'Cannot run' / 'Delayed run' bug fixed.
- World-coodination display for '@' screen.
- Player-location is shown on 'M'(Map) screen. (wilderness map is disabled)
- Ghost never bleeds.

13/12/2001 (Jir)
- NEWBIES_CANNOT_DROP specifies the minimum level for item/au dropping.
- ANTI_ARTS_HORDE configure option added.
- all the admin-level slash-commands are available again now.

13/12/2001 (Evileye)
- Fixed bugs in teleport_player_level
- Added town generation for Dungeon Master (limited)
- Monster generation in town/near town houses suppressed.
- Made unstatic_level function (was duplicated)
- Fixed bug in unstatic_level (space/time anchor wasnt killed for all)
- Fixed bug where new towns would not have objects/monsters attached
- Added some support for ironman dungeons - not recall
- Added support for hellish dungeons.
- Dungeons may not be generated in towns (must generate with town)

14/12/2001 (Evileye)
- Forced net code to recheck IP/port when asked
- Non mapping dungeons added. Player does not remember the map.
- Fixed bug which caused towns to be cloned in wild generator.
- Baselevel for new towns is set correctly for getlevel()
- Fixed bug which prevented towers having new_level_up_* set
  if they were maxdepth 1. (Caused endless loop in scatter)

16/12/2001 (Evileye)
- Added multiple store code, so towns have their own stores.